--- a/index.html
+++ b/index.html
@@ -2,15 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- displays site properly based on user's device -->
-
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="./images/favicon-32x32.png"
-    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -27,21 +21,23 @@
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   </head>
   <body>
-    <div class="logo">
-      <img src="images/logo.svg" alt="" />
-    </div>
-    <div class="container">
-      <div class="illustration">
-        <img src="images/illustration-mockups.svg" alt="" />
+    <div class="main-container">
+      <div class="logo">
+        <img src="images/logo.svg" alt="" />
       </div>
-      <div class="bottom-text">
-        <h1>Build The Community Your Fans Will Love</h1>
-        <p>
-          Huddle re-imageiner the way we build communities. you have a voice,
-          but so does your audience. Create connections with your users as your
-          engage in genuine discussion.
-        </p>
-        <button class="btn">Register</button>
+      <div class="container">
+        <div class="illustration">
+          <img src="images/illustration-mockups.svg" alt="" />
+        </div>
+        <div class="bottom-text">
+          <h1>Build The Community Your Fans Will Love</h1>
+          <p>
+            Huddle re-imageiner the way we build communities. you have a voice,
+            but so does your audience. Create connections with your users as
+            your engage in genuine discussion.
+          </p>
+          <button class="btn">Register</button>
+        </div>
       </div>
     </div>
   </body>
